# agent-tools-benchmark

./: .gitignore  DEVELOPING.md  README.md  pyproject.toml  run.py
agents/: __init__.py  base.py  instructions_only.py  with_tools.py
benchmark/: __init__.py  harness.py  metrics.py  types.py
docs/: research-tool-use-vs-instructions.md
results/: run_20260403_213804.json  run_haiku-4-5.json  run_sonnet-4-6.json
tasks/: __init__.py  base.py
tasks/alert_dedup/: __init__.py  generator.py  task.py  tools.py
tasks/contract_checker/: __init__.py  task.py
tasks/dependency_resolver/: __init__.py  task.py
tasks/expense_validator/: __init__.py  generator.py  task.py  tools.py
tasks/log_classifier/: __init__.py  task.py
tasks/scheduler/: __init__.py  task.py
